# wabt

decent/: test.wasm
decent/sgx/: CMakeLists.txt  config.h.in
decent/sgx/include/: config.h.in  sgx_string_view.h
decent/sgx/include/DecentWasmWat/: WasmWat.h
decent/sgx/src/: CMakeLists.txt  WasmWat.cc
src/: apply-names.cc  binary-reader.cc  binary-reader.h  binary-writer.cc  binding-hash.h  common.cc  common.h  config.cc  error.h  ir-util.cc  ir.cc  ir.h  literal.cc  stream.cc  stream.h  string-format.h  test-hexfloat.cc  token.h  wast-parser.cc
